Fixed layout issues with CSS grid

--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ body {
     line-height: 1.5;
 }
 
+.numbers {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
 .content {
     display: flex;
     align-items: center;
